java: jmh: change project.build.source 1.7 to 1.8