@@ -6,6 +6,7 @@ dbdir=/dev/shm/db_bench_enterprise # defined in db_bench_enterprise.yaml
 mkdir -p $dbdir
 cp $topdir/sideplugin/rockside/src/topling/web/{style.css,index.html} $dbdir
 args=(
+    --add-opens java.base/java.nio=ALL-UNNAMED
     -jar $mydir/target/rocksdbjni-jmh-1.0-SNAPSHOT-benchmarks.jar
     -p keyCount=10000
     -p keySize=128
